--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
   <title>threejs MMD loader</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
+  <meta name="description" content="threejs MMD loader miku">
+        <meta name="keywords" content="threejs,MMD,miku,webGL,openGL">
 
   <link rel="stylesheet" href="node_modules/bulma/css/bulma.min.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
@@ -76,6 +78,17 @@
   <script src="js/libs/stats.min.js"></script>
 
   <script src="js/main.js"></script>
+
+  <script>
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+    ga('create', 'UA-57261073-2', 'auto');
+    ga('send', 'pageview');
+
+  </script>
 
   </body>
 </html>
