--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         </ul>
       </div>
       <div style="margin-top: 1em;">
-        <a class="button" href="https://github.com/tic40/threejs_mmd" target="_blank">
+        <a class="button" href="https://github.com/tic40/threejs-mmd" target="_blank">
           <span class="icon">
             <i class="fa fa-github"></i>
           </span>
